--- a/SeleniumProject/packages.config
+++ b/SeleniumProject/packages.config
@@ -3,6 +3,7 @@
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
   <package id="NUnit" version="3.0.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.12.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="4.2.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="4.2.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="102.0.5005.6102" targetFramework="net461" />
 </packages>
