--- a/SeleniumProject/packages.config
+++ b/SeleniumProject/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BoDi" version="1.5.0" targetFramework="net461" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
+  <package id="Gherkin" version="19.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.13.3" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net461" />
   <package id="Selenium.Support" version="4.3.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="4.3.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="102.0.5005.6102" targetFramework="net461" />
+  <package id="SpecFlow" version="3.9.74" targetFramework="net461" />
+  <package id="SpecFlow.Internal.Json" version="1.0.8" targetFramework="net461" />
+  <package id="SpecFlow.NUnit" version="3.9.74" targetFramework="net461" />
+  <package id="SpecFlow.Tools.MsBuild.Generation" version="3.9.74" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
